--- a/pdsc/config/moc_metadata.yaml
+++ b/pdsc/config/moc_metadata.yaml
@@ -54,6 +54,10 @@ columns:
 
 scale_factors:
     CENTER_LONGITUDE: -1 # convert west to east longitude
+    UPPER_LEFT_LONGITUDE: -1
+    LOWER_LEFT_LONGITUDE: -1
+    UPPER_RIGHT_LONGITUDE: -1
+    LOWER_RIGHT_LONGITUDE: -1
     SCALED_IMAGE_WIDTH: 1000 # km to m
     SCALED_IMAGE_HEIGHT: 1000 # km to m
     SPACECRAFT_ALTITUDE: 1000 # km to m
