fix longitude for CTX/MOC; fixes #7

--- a/pdsc/config/moc_metadata.yaml
+++ b/pdsc/config/moc_metadata.yaml
@@ -58,6 +58,7 @@ scale_factors:
     LOWER_LEFT_LONGITUDE: -1
     UPPER_RIGHT_LONGITUDE: -1
     LOWER_RIGHT_LONGITUDE: -1
+    SUB_SPACECRAFT_LONGITUDE: -1
     SCALED_IMAGE_WIDTH: 1000 # km to m
     SCALED_IMAGE_HEIGHT: 1000 # km to m
     SPACECRAFT_ALTITUDE: 1000 # km to m
