add separate coverage reports for unit and functional tests; #11

--- a/test/unit.cfg
+++ b/test/unit.cfg
@@ -1,2 +1,2 @@
 [tool:pytest]
-addopts = --cov pdsc --cov-report html:test/htmlcov -m unit test
+addopts = --cov pdsc --cov-report html:test/unit_coverage -m unit test
