--- a/pdsc/config/hirise_rdr_metadata.yaml
+++ b/pdsc/config/hirise_rdr_metadata.yaml
@@ -23,7 +23,7 @@ columns:
     - [TARGET_CENTER_DISTANCE, target_center_distance, real]
     - [SLANT_DISTANCE, slant_distance, real]
     - [NORTH_AZIMUTH, north_azimuth, real]
-    - [SUB_SOLAR_AZIMUTH, sub_solar_aziumth, real]
+    - [SUB_SOLAR_AZIMUTH, sub_solar_azimuth, real]
     - [SUB_SOLAR_LATITUDE, sub_solar_latitude, real]
     - [SUB_SOLAR_LONGITUDE, sub_solar_longitude, real]
     - [SUB_SPACECRAFT_LATITUDE, sub_spacecraft_latitude, real]
