update imports for Python 3
Issue: #3

--- a/test/functional.cfg
+++ b/test/functional.cfg
@@ -1,2 +1,5 @@
 [tool:pytest]
 addopts = --cov pdsc --cov-report html:test/functional_coverage -m functional test
+markers =
+    unit: runs unit tests
+    functional: runs functional tests
