--- a/test/unit.cfg
+++ b/test/unit.cfg
@@ -1,2 +1,5 @@
 [tool:pytest]
 addopts = --cov pdsc --cov-report html:test/unit_coverage -m unit test
+markers =
+    unit: runs unit tests
+    functional: runs functional tests
