--- a/pdsc/config/lroc_cdr_metadata.yaml
+++ b/pdsc/config/lroc_cdr_metadata.yaml
@@ -7,14 +7,14 @@ columns:
     - [NORTH_AZIMUTH, north_azimuth, real]
     - [SCALED_PIXEL_WIDTH, pixel_width, real]
     - [VOLUME_ID, volume_id, text]
-    - [FILE_NAME_SPECIFICATION, file_name_specification, text]
+    - [FILE_SPECIFICATION_NAME, file_name_specification, text]
     - [PRODUCT_VERSION_ID, product_version_id, text]
     - [TARGET_NAME, target_name, text]
     - [ORBIT_NUMBER, orbit_number, integer]
     - [MISSION_PHASE_NAME, mission_phase_name, text]
     - [RATIONALE_DESC, description, text]
-    - [START_TIME, start_time, timestamp]
-    - [STOP_TIME, stop_time, timestamp]
+    - [START_TIME, start_time, text]
+    - [STOP_TIME, stop_time, text]
     - [SPACECRAFT_CLOCK_START_COUNT, sclk_start, real]
     - [SPACECRAFT_CLOCK_STOP_COUNT, sclk_stop, real]
     - [FILTER_NAME, filter_name, text]
@@ -36,7 +36,7 @@ scale_factors:
     SOLAR_DISTANCE: 1000 # km to m
 
 index:
-    - observation_id
+    - product_id
 
 segmentation:
     resolution: 50000
